--- a/Admin/nav.html
+++ b/Admin/nav.html
@@ -10,7 +10,7 @@
   <div id="sidenav" class="sidenav">
     <div class="sidenav_header">
       <div class="logo_section">
-        <img src="../img/Student.png" alt="Logo" width="400px">
+        <img src="../img/student.png" alt="Logo" width="400px">
         <h3>Aluna</h3>
       </div>
 
